--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "upload": "gulp upload",
+    "lint": "vue-cli-service lint",
+    "submit": "npm run build && git add . && git commit -m 'deploy' && git push origin HEAD && npm run upload",
+    "publish": "gulp publish"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
+    "minireset.css": "0.0.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -25,12 +32,20 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "easeftp": "^2.0.40",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "fetch-jsonp": "^1.1.3",
+    "gulp": "^4.0.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "mocker-api": "^2.8.1",
     "prettier": "^2.2.1",
-    "typescript": "~4.1.5"
-  }
+    "style-resources-loader": "^1.4.1",
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5"
+  },
+  "channel": "sports",
+  "channelId": "0005"
 }
